--- a/Attendance/appsettings.json
+++ b/Attendance/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "BusinessSettings": {
+    "DaySwitchHour": 5 // 日替わり時刻（0~23）
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AttendanceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
