--- a/Attendance/appsettings.json
+++ b/Attendance/appsettings.json
@@ -2,6 +2,9 @@
   "BusinessSettings": {
     "DaySwitchHour": 5 // 日替わり時刻（0~23）
   },
+  "JwtSettings": {
+    "Key": "this_is_a_very_super_secret_key_for_attendance_app_2026_plus_extra_words_to_make_it_long_enough"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AttendanceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
